welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:7: error: ';' expected but ')' found.
				vuBiscuit=true)
                                              ^